end of all front, change logo size and the display for more responsivness

--- a/_includes/header_fr.html
+++ b/_includes/header_fr.html
@@ -4,7 +4,7 @@
 <!--     <a href="https://www.spirulinazur.fr/">  <img src="assets/logo.svg" style="width:50%; height:50%"  alt="logo of spirulinazur"></a> -->
     <a href="https://www.spirulinazur.fr/" target="_blank"
       class="social-link social-icon">
-      <img src="/assets/logo.png" style="width:30%; height:30%; margin-left:15%;"  alt="logo of spirulinazur">
+      <img src="/assets/logo.png" class="logo-banner"  alt="logo of spirulinazur">
     </a>
 
 
