need to push to test since i am in china

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
     <title> Spirulin'Azur </title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="author" content="Julien Pelegri">
+
+    <meta property="og:image" content="https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button/logo_figma.png">
+    <meta property="og:image:type" content="image/png">
 
     <!-- Favicons -->
     {% include favicons.html %}
