--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="author" content="Julien Pelegri">
 
-    <meta property="og:image" content="https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button/logo_figma.png">
+    <!-- <meta property="og:url" content="https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button/logo_figma.png"> -->
+    <!-- <meta property="og:image" content="../assets/logo_figma.png"> -->
+
+
     <meta property="og:image:type" content="image/png">
+    <meta property="og:image" content="../assets/logo_figma.png" />
+    <meta property="og:description" content="Parce que la nature a déjà tout prévu." />
+    <meta property="og:image" content="http://https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/logo_figma.png">
+
 
     <!-- Favicons -->
     {% include favicons.html %}
+
+
+    <meta property="og:image" content="http://https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/logo_figma.png">
+    <meta property="og:image:type" content="../assets/logo_figma.png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/"/>
+    <meta property="og:title" content="Website title" />
+    <meta property="og:description" content="Website description." />
 
     <!-- path to the css code !  -->
     <link rel="stylesheet" href="../css/main.css">
