--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     {% include favicons.html %}
 
 
-    <meta property="og:url" content="https://dazzling-hermann-01d829.netlify.com/logo_figma-fb.png"/>
+    <meta property="og:url" content="https://dazzling-hermann-01d829.netlify.com/"/>
     <meta property="og:title" content="Website title" />
     <meta property="og:description" content="Website description. XXXXXXXXXXXXXXXXXXX"  />
 
