--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
 
 
     <meta property="og:url" content="https://dazzling-hermann-01d829.netlify.com/"/>
-    <meta property="og:title" content="Website title" />
-    <meta property="og:description" content="Website description. XXXXXXXXXXXXXXXXXXX"  />
+    <meta property="og:title" content="Spirulin'Azur" />
+    <meta property="og:description" content="Parce que la nature a déjà tout prévu."  />
 
     <!-- <meta property="og:image" content="http://localhost:4000/logo_figma.png"> -->
 <!--     <meta property="og:image:type" content="../assets/logo_figma.png">
