--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="author" content="Julien Pelegri">
+    <meta name="title" content="Spirulin'Azur">
+    <meta name="description" content="Parce que la nature a déjà tout prévu.">
+
 
     <!-- <meta property="og:url" content="https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button/logo_figma.png"> -->
     <!-- <meta property="og:image" content="../assets/logo_figma.png"> -->
@@ -15,18 +18,28 @@
 
 
     <!-- Favicons -->
+
+
     {% include favicons.html %}
 
-
+<!--
     <meta property="og:url" content="https://dazzling-hermann-01d829.netlify.com/"/>
     <meta property="og:title" content="Spirulin'Azur" />
     <meta property="og:description" content="Parce que la nature a déjà tout prévu."  />
-
+ -->
     <!-- <meta property="og:image" content="http://localhost:4000/logo_figma.png"> -->
 <!--     <meta property="og:image:type" content="../assets/logo_figma.png">
     <meta property="og:image:width" content="40">
     <meta property="og:image:height" content="40"> -->
     <!-- <meta property="og:type" content="website" /> -->
+
+
+    <meta property="og:type" content="http://www.spirulinazur.com/">
+    <!-- <meta property="og:url" content="https://metatags.io/"> -->
+    <meta property="og:title" content="Spirulin'Azur">
+    <meta property="og:description" content="Parce que la nature a déjà tout prévu.">
+    <meta property="og:image" content="https://www.bing.com/th?id=OIP.LaTZPWLKurJKEjheruGKyQHaNK&pid=Api&rs=1">
+
 
     <!-- path to the css code !  -->
     <link rel="stylesheet" href="../css/main.css">
