forgot to change domain name in share button

--- a/_includes/share-bare.html
+++ b/_includes/share-bare.html
@@ -5,7 +5,7 @@
     &#128073;
   </p>
 
-  <a href="https://www.facebook.com/sharer/sharer.php?app_id=534916013927872&sdk=joey&u=https%3A%2F%2Fdazzling-hermann-01d829.netlify.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=580')">
+  <a href="https://www.facebook.com/sharer/sharer.php?app_id=534916013927872&sdk=joey&u=http://www.spirulinazur.com/create-facebook-share-button-for-website-webpages/&display=popup&ref=plugin&src=share_button" onclick="return !window.open(this.href, 'Facebook', 'width=640,height=580')">
     <img src="../assets/icon-share.png" id="logo-share">
     </img>
   </a>
