change photo share fb

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     <!-- <meta property="og:url" content="https://metatags.io/"> -->
     <meta property="og:title" content="Spirulin'Azur">
     <meta property="og:description" content="Parce que la nature a déjà tout prévu.">
-    <meta property="og:image" content="https://www.bing.com/th?id=OIP.LaTZPWLKurJKEjheruGKyQHaNK&pid=Api&rs=1">
+    <meta property="og:image" content="logo_figma.png">
 
 
     <!-- path to the css code !  -->
