--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,8 @@
     <!-- <meta property="og:image:alt" content="Photo du propriétaire de l'entreprise" /> -->
 
 
-<!--     <meta property="og:image:width" content="50" />
-    <meta property="og:image:height" content="50" /> -->
+    <meta property="og:image:width" content="50" />
+    <meta property="og:image:height" content="50" />
 
 
 
