new photo share

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,12 +38,12 @@
     <!-- <meta property="og:url" content="https://metatags.io/"> -->
     <meta property="og:title" content="Spirulin'Azur">
     <meta property="og:description" content="Parce que la nature a déjà tout prévu.">
-    <meta property="og:image" content="https://www.spirulinazur.com/">
+    <meta property="og:image" content="https://cdn.static02.nicematin.com/media/npo/mobile_1440w/2019/07/rap-777066-666053.jpg">
     <!-- <meta property="og:image:alt" content="Photo du propriétaire de l'entreprise" /> -->
 
-
+<!--
     <meta property="og:image:width" content="50" />
-    <meta property="og:image:height" content="50" />
+    <meta property="og:image:height" content="50" /> -->
 
 
 
