change mail regex

--- a/_includes/form_french.html
+++ b/_includes/form_french.html
@@ -1,7 +1,7 @@
 <form accept-charset="UTF-8" action="" method="POST" data-netlify="true" netlify class="form-container">
     <div class="A">
 
-      <input type="email" name="email" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required placeholder="ton_mail@hotmail.com" class="form-input">
+      <input type="email" name="email" pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" required placeholder="ton_mail@hotmail.com" class="form-input">
       <input type="hidden" name="utf8" value="✓">
     </div>
 
